--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     </div>
 
     <div class="controls">
-        <span class="vid-btn active" data-src="images/vid-2.mp4"></span>
+        <span class="vid-btn active" data-src="images/trav7.mp4"></span>
         <span class="vid-btn" data-src="images/vid-3.mp4"></span>
         <span class="vid-btn" data-src="images/vid-1.mp4"></span>
         <span class="vid-btn" data-src="images/vid-4.mp4"></span>
@@ -482,7 +482,7 @@
 
 <video width="100%" height="auto" controls>
     <source src="images/trav8.MOV">
-  </video> -->
+  </video>
 
 <!--- goa video section ends-->
 
