--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
 <!-- goa video section starts-->
 
 <video width="100%" height="auto" controls>
-    <source src="images/trav8.MOV">
+    <source src="images/trav88.mp4">
   </video>
 
 <!--- goa video section ends-->
