--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <div id="menu-bar" class="fas fa-bars"></div>
 
-    <a href="https://www.holidify.com/places/goa/" class="logo" style="text-decoration: none;">&nbsp;&nbsp; <span><b>T</b></span>RAVSIONATE</a>
+    <a href="https://toko.ly/travshionatteagency/home" class="logo" style="text-decoration: none;">&nbsp;&nbsp; <span><b>T</b></span>RAVSIONATE</a>
 
     <nav class="navbar">
         <a href="#home" style="text-decoration: none;"><b>HOME</b></a>
